check is working

--- a/RandomizedHoughEllipseTransform/RandomizedHoughEllipseTransform/RandomizedHoughEllipseTransform.vcxproj
+++ b/RandomizedHoughEllipseTransform/RandomizedHoughEllipseTransform/RandomizedHoughEllipseTransform.vcxproj
@@ -81,6 +81,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="rhet.cpp" />
+    <ClCompile Include="rhet_main.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
